# ProgrammingII_FinalProject

./: .gitignore  Idea.md  LICENSE  Proposal.md  README.md
Hiya-Server/: CMakeLists.txt
Hiya-Server/include/: server.h
Hiya-Server/src/: main.cpp  server.cpp
Hiya-Why-You-Use-Reinforcement-Learning-To-Play-Tetris-You-Dont-Know-How-To-Play-It-Yourself-Uncle-Roger-So-Sad-Now/: .clang-format  CMakeLists.txt  build_and_run.sh
Hiya-Why-You-Use-Reinforcement-Learning-To-Play-Tetris-You-Dont-Know-How-To-Play-It-Yourself-Uncle-Roger-So-Sad-Now/allegro/include/allegro5/: allegro.h
Hiya-Why-You-Use-Reinforcement-Learning-To-Play-Tetris-You-Dont-Know-How-To-Play-It-Yourself-Uncle-Roger-So-Sad-Now/allegro/lib/: liballegro.so.5.2  liballegro_acodec.so.5.2  liballegro_acodec.so.5.2.6  liballegro_audio.so.5.2  liballegro_audio.so.5.2.6  liballegro_color.so.5.2  liballegro_color.so.5.2.6  liballegro_dialog.so.5.2  liballegro_dialog.so.5.2.6  liballegro_font.so.5.2  liballegro_font.so.5.2.6  liballegro_image.so.5.2  liballegro_image.so.5.2.6  liballegro_main.so.5.2  liballegro_main.so.5.2.6  liballegro_memfile.so.5.2  liballegro_memfile.so.5.2.6  liballegro_physfs.so.5.2  liballegro_physfs.so.5.2.6  liballegro_primitives.so.5.2  liballegro_primitives.so.5.2.6  liballegro_ttf.so.5.2  liballegro_ttf.so.5.2.6  liballegro_video.so.5.2  liballegro_video.so.5.2.6
Hiya-Why-You-Use-Reinforcement-Learning-To-Play-Tetris-You-Dont-Know-How-To-Play-It-Yourself-Uncle-Roger-So-Sad-Now/include/: animations.h  client.h  game.h  globals.h  log.h  menu.h  server.h  tetriscontroller.h  tetromino.h  window.h
Hiya-Why-You-Use-Reinforcement-Learning-To-Play-Tetris-You-Dont-Know-How-To-Play-It-Yourself-Uncle-Roger-So-Sad-Now/src/: animations.cpp  client.cpp  game.cpp  main.cpp  menu.cpp  server.cpp  tetriscontroller.cpp  tetromino.cpp  window.cpp
Q-Learning/Q-Tetris/: NN_Translate.py  RL_Brain.py  main.py
Reinforcement-Learning/Cpp-Executable/: CMakeLists.txt  main.cpp
Reinforcement-Learning/Cpp-Executable/include/: ReinLearn.h  SRS.h  client.h  globals.h
Reinforcement-Learning/Cpp-Executable/src/: .client.cpp.swp  client.cpp
(+9749 files in other folders)
